cmake_minimum_required(VERSION 3.10.2)
project(hello_cpp_17 CXX)
add_executable(Chapter06_fourier ./Chapter06/fourier.cpp)
add_executable(Chapter06_split ./Chapter06/split.cpp)
add_executable(Chapter06_mandelbrot ./Chapter06/mandelbrot.cpp)
add_executable(Chapter06_remove_consecutive_whitespace ./Chapter06/remove_consecutive_whitespace.cpp)
add_executable(Chapter06_compress ./Chapter06/compress.cpp)
add_executable(Chapter06_word_suggestion ./Chapter06/word_suggestion.cpp)
add_executable(Chapter06_trie ./Chapter06/trie.cpp)
add_executable(Chapter06_gather ./Chapter06/gather.cpp)
add_executable(Chapter06_error_sum ./Chapter06/error_sum.cpp)
add_executable(Chapter03_checked_iterator ./Chapter03/checked_iterator.cpp)
add_executable(Chapter03_making_iterators_stl_compatible ./Chapter03/making_iterators_stl_compatible.cpp)
add_executable(Chapter03_iterator_wrapper ./Chapter03/iterator_wrapper.cpp)
add_executable(Chapter03_iterator_sentinel ./Chapter03/iterator_sentinel.cpp)
add_executable(Chapter03_algorithms_in_iterators ./Chapter03/algorithms_in_iterators.cpp)
add_executable(Chapter03_reverse_iterators ./Chapter03/reverse_iterators.cpp)
add_executable(Chapter03_zip_iterator ./Chapter03/zip_iterator.cpp)
add_executable(Chapter03_own_iterable_range ./Chapter03/own_iterable_range.cpp)
add_executable(Chapter07_custom_string ./Chapter07/custom_string.cpp)
add_executable(Chapter07_formatting ./Chapter07/formatting.cpp)
add_executable(Chapter07_creating_strings ./Chapter07/creating_strings.cpp)
add_executable(Chapter07_initialize_complex_objects_from_file_input ./Chapter07/initialize_complex_objects_from_file_input.cpp)
add_executable(Chapter07_log_regions ./Chapter07/log_regions.cpp)
add_executable(Chapter07_filling_containers ./Chapter07/filling_containers.cpp)
add_executable(Chapter07_count_all_words ./Chapter07/count_all_words.cpp)
add_executable(Chapter07_string_view ./Chapter07/string_view.cpp)
add_executable(Chapter07_readable_error_msg ./Chapter07/readable_error_msg.cpp)
add_executable(Chapter07_link_extraction ./Chapter07/link_extraction.cpp)
add_executable(Chapter07_trim_whitespace ./Chapter07/trim_whitespace.cpp)
add_executable(Chapter07_ostream_printing ./Chapter07/ostream_printing.cpp)
add_executable(Chapter07_pretty_print_on_the_fly ./Chapter07/pretty_print_on_the_fly.cpp)
add_executable(Chapter07_strings_from_user_input ./Chapter07/strings_from_user_input.cpp)
add_executable(Chapter04_std_function ./Chapter04/std_function.cpp)
add_executable(Chapter04_cartesian_product ./Chapter04/cartesian_product.cpp)
add_executable(Chapter04_functions_on_the_run ./Chapter04/functions_on_the_run.cpp)
add_executable(Chapter04_multicaller ./Chapter04/multicaller.cpp)
add_executable(Chapter04_concatenation ./Chapter04/concatenation.cpp)
add_executable(Chapter04_combine ./Chapter04/combine.cpp)
add_executable(Chapter04_transform_if ./Chapter04/transform_if.cpp)
add_executable(Chapter01_if_constexpr ./Chapter01/if_constexpr.cpp)
add_executable(Chapter01_inline_variable ./Chapter01/inline_variable.cpp)
add_executable(Chapter01_if_switch_initializer ./Chapter01/if_switch_initializer.cpp)
add_executable(Chapter01_fold_expressions ./Chapter01/fold_expressions.cpp)
add_executable(Chapter01_structured_bindings ./Chapter01/structured_bindings.cpp)
add_executable(Chapter01_template_class_type_deduction ./Chapter01/template_class_type_deduction.cpp)
add_executable(Chapter02_mapnode_key_modification ./Chapter02/mapnode_key_modification.cpp)
add_executable(Chapter02_map_insertion_hint ./Chapter02/map_insertion_hint.cpp)
add_executable(Chapter02_erase_remove_idiom ./Chapter02/erase_remove_idiom.cpp)
add_executable(Chapter02_vector_access_fast_or_safe ./Chapter02/vector_access_fast_or_safe.cpp)
add_executable(Chapter02_word_frequency_counter ./Chapter02/word_frequency_counter.cpp)
add_executable(Chapter02_personal_organiser_priority_queue ./Chapter02/personal_organiser_priority_queue.cpp)
add_executable(Chapter02_filter_unique_user_input ./Chapter02/filter_unique_user_input.cpp)
add_executable(Chapter02_custom_type_unordered_map ./Chapter02/custom_type_unordered_map.cpp)
add_executable(Chapter02_quick_delete_from_unordered_vector ./Chapter02/quick_delete_from_unordered_vector.cpp)
add_executable(Chapter02_sentence_length ./Chapter02/sentence_length.cpp)
add_executable(Chapter02_keep_vector_sorted ./Chapter02/keep_vector_sorted.cpp)
add_executable(Chapter02_efficient_insert_or_reassign_to_map ./Chapter02/efficient_insert_or_reassign_to_map.cpp)
add_executable(Chapter02_rpn_calculator ./Chapter02/rpn_calculator.cpp)
add_executable(Chapter10_normalizer ./Chapter10/normalizer.cpp)
add_executable(Chapter10_file_size ./Chapter10/file_size.cpp)
add_executable(Chapter10_canonical_filepath ./Chapter10/canonical_filepath.cpp)
add_executable(Chapter10_dupe_compress ./Chapter10/dupe_compress.cpp)
add_executable(Chapter10_list ./Chapter10/list.cpp)
add_executable(Chapter10_renamer ./Chapter10/renamer.cpp)
add_executable(Chapter10_file_type ./Chapter10/file_type.cpp)
add_executable(Chapter10_grepper ./Chapter10/grepper.cpp)
add_executable(Chapter09_multi_producer_consumer ./Chapter09/multi_producer_consumer.cpp)
add_executable(Chapter09_mandelbrot ./Chapter09/mandelbrot.cpp)
add_executable(Chapter09_call_once ./Chapter09/call_once.cpp)
add_executable(Chapter09_async ./Chapter09/async.cpp)
add_executable(Chapter09_avoid_deadlock ./Chapter09/avoid_deadlock.cpp)
add_executable(Chapter09_auto_parallel ./Chapter09/auto_parallel.cpp)
add_executable(Chapter09_threads ./Chapter09/threads.cpp)
add_executable(Chapter09_producer_consumer ./Chapter09/producer_consumer.cpp)
add_executable(Chapter09_sleep ./Chapter09/sleep.cpp)
add_executable(Chapter09_chains ./Chapter09/chains.cpp)
add_executable(Chapter09_sync_cout ./Chapter09/sync_cout.cpp)
add_executable(Chapter09_shared_lock ./Chapter09/shared_lock.cpp)
add_executable(Chapter08_shared_ptr_different_member ./Chapter08/shared_ptr_different_member.cpp)
add_executable(Chapter08_shared_members ./Chapter08/shared_members.cpp)
add_executable(Chapter08_random_generator ./Chapter08/random_generator.cpp)
add_executable(Chapter08_any ./Chapter08/any.cpp)
add_executable(Chapter08_random_distro ./Chapter08/random_distro.cpp)
add_executable(Chapter08_tuple ./Chapter08/tuple.cpp)
add_executable(Chapter08_weak_ptr ./Chapter08/weak_ptr.cpp)
add_executable(Chapter08_relative_absolute_times ./Chapter08/relative_absolute_times.cpp)
add_executable(Chapter08_apply_functions_on_tuples ./Chapter08/apply_functions_on_tuples.cpp)
add_executable(Chapter08_shared_ptr ./Chapter08/shared_ptr.cpp)
add_executable(Chapter08_optional ./Chapter08/optional.cpp)
add_executable(Chapter08_shared_from_this ./Chapter08/shared_from_this.cpp)
add_executable(Chapter08_legacy_shared_ptr ./Chapter08/legacy_shared_ptr.cpp)
add_executable(Chapter08_variant ./Chapter08/variant.cpp)
add_executable(Chapter08_unique_ptr ./Chapter08/unique_ptr.cpp)
add_executable(Chapter08_ratio_conversion ./Chapter08/ratio_conversion.cpp)
add_executable(Chapter05_transforming_items_in_containers ./Chapter05/transforming_items_in_containers.cpp)
add_executable(Chapter05_finding_items ./Chapter05/finding_items.cpp)
add_executable(Chapter05_pattern_search_string ./Chapter05/pattern_search_string.cpp)
add_executable(Chapter05_sampling_vectors ./Chapter05/sampling_vectors.cpp)
add_executable(Chapter05_input_permutations ./Chapter05/input_permutations.cpp)
add_executable(Chapter05_dictionary_merge ./Chapter05/dictionary_merge.cpp)
add_executable(Chapter05_sorting_containers ./Chapter05/sorting_containers.cpp)
add_executable(Chapter05_copying_items ./Chapter05/copying_items.cpp)
add_executable(Chapter05_removing_items_from_containers ./Chapter05/removing_items_from_containers.cpp)
add_executable(Chapter05_reducing_range_in_vector ./Chapter05/reducing_range_in_vector.cpp)